--- a/TeamProject/templates/main.html
+++ b/TeamProject/templates/main.html
@@ -3,8 +3,10 @@
 <head>
     <link rel="stylesheet" type="text/css" href="../static/css/main.css">
     <link rel="stylesheet" text="text/css" href="../static/css/pagination.css">
+    <!-- <link rel="stylesheet" text="text/css" href="../static/css/search.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -18,6 +20,11 @@
         <div class="sub_container">
             <span class="main_login">Login</span> |
             <span class="main_signup">Sign up</span>
+        </div>
+        <div class="search_container">
+            <i class="fas fa-search fa-2x search_icon"></i>
+            <input id="search" class="search" type="text" placeholder="Search?" autocomplete="off">
+            <input id="search_submit" class="search_submit" value="" type="submit">
         </div>
     </div>
 
