--- a/TeamProject/static/css/style.css
+++ b/TeamProject/static/css/style.css
@@ -1,3 +1,5 @@
+:root{     --color_dark : #303030;     --color_ivory : #e6e2dd;     --color_pink : #f8bebe;     --color_yellow : #fec33f; }
+
 *{
 	margin : 0;
 	padding: 0;
