--- a/TeamProject/static/css/manager.css
+++ b/TeamProject/static/css/manager.css
@@ -15,11 +15,11 @@ a:active {text-decoration: none;}
 /*------------- Nav Bar --------------*/
 .nav_container {
     height: 10vh;
-    background-image: linear-gradient(to right, #505285 0%, #585e92 12%, #65689f 25%, #7474b0 37%, #7e7ebb 50%, #8389c7 62%, #9795d4 75%, #a2a1dc 87%, #b5aee4 100%);
+    /* background-image: linear-gradient(to right, #505285 0%, #585e92 12%, #65689f 25%, #7474b0 37%, #7e7ebb 50%, #8389c7 62%, #9795d4 75%, #a2a1dc 87%, #b5aee4 100%); */
+    background: var(--color_dark);
     color: white;
     font-weight: bold;
     font-size: 1.5em;
-    padding: 0 10%;
     font-family: sans-serif;
 }
 
@@ -54,7 +54,7 @@ a:active {text-decoration: none;}
     color:var(--color_ivory);
     background: var(--color_dark);
     border-radius: 4px;
-    border: none;
+    border: solid 2px var(--color_dark);
     font-size: 1rem;
     display: flex;
     align-items: center;
@@ -63,16 +63,20 @@ a:active {text-decoration: none;}
     cursor: pointer;
 }
 .top_btn:hover, .top_btn:focus{
-    background: gray;
+    background: var(--color_pink);
+    color: var(--color_dark);
 }
 
 
-/* ------------ Board Management ------------- */
+/* ------------------------- Board Management Part ------------------------ */
 .board_management_container{
+    display: none;
     margin: 3vw 4vw 3vw 4vw;
     color: var(--color_dark);
     font-weight: bold;
     font-size: 1rem;
+    top:0;
+    left:0;
 }
 
 .sub_title{
@@ -83,11 +87,11 @@ a:active {text-decoration: none;}
     width: 100%;
     height: 1px;
     background: var(--color_dark);
-    margin: 4vw 0 4vw 0;
+    margin: 1vw 0 3vw 0;
 }
 
 .category_container{
-    margin-bottom: 3vw;
+    margin-bottom: 2vw;
 }
 
 .category_menu{
@@ -129,7 +133,7 @@ a:active {text-decoration: none;}
 /* -------------- board container ------------- */
 .board_menu{
     display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(20%, auto));
+	grid-template-columns: repeat(auto-fill, minmax(18%, auto));
 	gap: 20px;
 	z-index: 1;
 	transition-duration: .5s;
@@ -149,9 +153,18 @@ a:active {text-decoration: none;}
     width: 30px;
     height: 30px;
     margin-left: 50px;
-    border: solid 2px var(--color_dark);
     cursor: pointer;
+    background: var(--color_dark);
+    color: var(--color_ivory);
+    border: solid 2px var(--color_dark);
+    line-height: 1.5;
+    transition: all .2s;
 }
+.board_del_btn:hover, .board_del_btn:focus{
+    background: var(--color_yellow);
+    color: var(--color_dark);
+}
+
 
 .pages{
 	margin-right: 1rem;
@@ -168,4 +181,52 @@ a:active {text-decoration: none;}
 .pages:hover{
 	color: grey;
 	cursor: pointer;
+}
+
+/* ---------------------------- Report Management Part ------------------------------------ */
+.report_management_container {
+    display: none;
+    margin: 3vw 4vw 3vw 4vw;
+    color: var(--color_dark);
+    font-weight: bold;
+    font-size: 1rem;
+}
+
+.report_container{
+    background: var(--color_ivory);
+    color: var(--color_dark);
+    border: solid 2px var(--color_dark);
+    margin: 3vw 0 3vw 0;
+    padding: 10px;
+    width: 92vw;
+}
+
+.report_sub_title{
+    display: flex;
+    justify-content: space-around;
+}
+
+.line2{
+    width: 100%;
+    height: 1.5px;
+    background: var(--color_dark);
+    margin: 1vh 0 1vh 0;
+}
+
+.report{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 1rem;
+}
+
+.report_btn{
+    background: var(--color_dark);
+    color: var(--color_ivory);
+    border: solid 2px var(--color_dark);
+    border-radius: 4px;
+    cursor: pointer;
+}
+.report_btn:hover, .report_btn:focus{
+    background: var(--color_yellow);
+    color: var(--color_dark);
 }
