--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -80,47 +80,55 @@
         </div>
 
         <div class="report_container">
-            <div class="report_sub_title">
-                <input type="checkbox" checked>
-                <span>신고 날짜</span>
-                <span>게시글 제목</span>
-                <span>신고 사유</span>
-                <span>수정</span>
-                <span>삭제</span>
+            <div class="report_sub_title report">
+                <input type="checkbox" disabled class="r_item">
+                <span class="r_item">신고 날짜</span>
+                <span class="r_item">게시글 제목</span>
+                <span class="r_item">신고 사유</span>
+                <span class="r_item">수정</span>
+                <span class="r_item">삭제</span>
             </div>
             <div class="line2"></div>
             <div class="reports">
                 <div class="report">
-                    <input type="checkbox">
-                    <span>2020/09/14</span>
-                    <span>아ㅋㅋ 진짜 코딩 너무재밌네</span>
-                    <span>홍보 및 낚시성 게시글</span>
-                    <button class="report_btn">수정</button>
-                    <button class="report_btn">삭제</button>
+                    <input type="checkbox" class="r_item">
+                    <span class="r_item">ㅇ</span>
+                    <span class="r_item">ㅇ</span>
+                    <span class="r_item">ㅇ</span>
+                    <button class="report_btn r_item">수정</button>
+                    <button class="report_btn r_item">삭제</button>
                 </div>
                 <div class="report">
-                    <input type="checkbox">
-                    <span>2020/09/14</span>
-                    <span>아ㅋㅋ 진짜 코딩 너무재밌네</span>
-                    <span>홍보 및 낚시성 게시글</span>
-                    <button class="report_btn">수정</button>
-                    <button class="report_btn">삭제</button>
+                    <input type="checkbox" class="r_item">
+                    <span class="r_item">2020/09/14</span>
+                    <span class="r_item">아ㅋㅋ 진짜 코딩 너무재밌네</span>
+                    <span class="r_item">홍보 및 낚시성 게시글</span>
+                    <button class="report_btn r_item">수정</button>
+                    <button class="report_btn r_item">삭제</button>
                 </div>
                 <div class="report">
-                    <input type="checkbox">
-                    <span>2020/09/14</span>
-                    <span>아ㅋㅋ 진짜 코딩 너무재밌네</span>
-                    <span>홍보 및 낚시성 게시글</span>
-                    <button class="report_btn">수정</button>
-                    <button class="report_btn">삭제</button>
+                    <input type="checkbox" class="r_item">
+                    <span class="r_item">2020/09/14</span>
+                    <span class="r_item">아ㅋㅋ 진짜 코딩 너무재밌네</span>
+                    <span class="r_item">홍보 및 낚시성 게시글</span>
+                    <button class="report_btn r_item">수정</button>
+                    <button class="report_btn r_item">삭제</button>
                 </div>
                 <div class="report">
-                    <input type="checkbox">
-                    <span>2020/09/14</span>
-                    <span>아ㅋㅋ 진짜 코딩 너무재밌네</span>
-                    <span>홍보 및 낚시성 게시글</span>
-                    <button class="report_btn">수정</button>
-                    <button class="report_btn">삭제</button>
+                    <input type="checkbox" class="r_item">
+                    <span class="r_item">2020/09/14</span>
+                    <span class="r_item">아ㅋㅋ 진짜 코딩 너무재밌네</span>
+                    <span class="r_item">홍보 및 낚시성 게시글</span>
+                    <button class="report_btn r_item">수정</button>
+                    <button class="report_btn r_item">삭제</button>
+                </div>
+                <div class="report">
+                    <input type="checkbox" class="r_item">
+                    <span class="r_item">2020/09/14</span>
+                    <span class="r_item">아ㅋㅋ 진짜 코딩 너무재밌네</span>
+                    <span class="r_item">홍보 및 낚시성 게시글</span>
+                    <button class="report_btn r_item">수정</button>
+                    <button class="report_btn r_item">삭제</button>
                 </div>
             </div>
         </div>
