--- a/TeamProject/static/css/main.css
+++ b/TeamProject/static/css/main.css
@@ -3,11 +3,13 @@
 	--color_ivory : #e6e2dd;
 	--color_pink : #f8bebe;
 	--color_yellow : #fec33f;
+	--color_blue : #54a0ff;
 }
 
 body {
 	margin: 0;
 	background: var(--color_ivory);
+	font-family: sans-serif;
 }
 
 .container {
@@ -102,7 +104,7 @@ a:link, a:visited, a:active {
 	outline: none;
 	border: solid 2px var(--color_ivory);
 	border-radius: 4px;
-	color: var(--color_pink);
+	color: darkorange;
 	font-size: 1rem;
 	font-weight: bold;
 
@@ -119,7 +121,7 @@ a:link, a:visited, a:active {
 	background-repeat: no-repeat;
 }
 .search::placeholder{
-	color: var(--color_pink);
+	color: darkorange;
 	font-weight: normal;
 }
 
@@ -130,7 +132,9 @@ a:link, a:visited, a:active {
 	cursor: text;
 	background-position: 0 0;
 }
-
+.search:focus.search::placeholder{
+	color:darkorange;
+}
 .search_submit{
 	z-index : 2;
 	cursor: pointer;
