메인 베스트 게시글 API 연결 및 테스트 사진 임시저장 (20.09.15)

--- a/TeamProject/static/css/main.css
+++ b/TeamProject/static/css/main.css
@@ -18,7 +18,7 @@ body {
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	background-image: url("../img/star.jpg");
+	background-image: url("../img/door1.jpg");
 	background-size: 100vw 100vh;
 	background-repeat: no-repeat;
 	color: whitesmoke;
