--- a/TeamProject/static/css/post.css
+++ b/TeamProject/static/css/post.css
@@ -207,11 +207,15 @@
 	display: inline-block;
 }
 .infoTop_buttons input{
-	width: 50px;
+	width: 30px;
 	height: 25px;
-	margin-left: 15px;
-	border-radius: 10%;
-	background-color: white;
+	margin-left: 5px;
+	border-style: none;
+	background-color: transparent;
+}
+.infoTop_buttons input:hover{
+	font-weight: 600;
+	cursor: pointer;
 }
 
 .infoTop_sub{
@@ -299,9 +303,10 @@
 
 }
 .comment_num{
-	font-size: 1.5em;
+	margin-bottom:10px;
+	font-size: 1.3em;
 	font-weight : 500;
-	line-height: 1.6;	
+	line-height: 5px;	
 }
 .comment_input {
 	display: flex;
@@ -321,6 +326,86 @@
 	height: 30px;
 
 }
+.comment_list{
+	position: relative;
+	margin-top: 10px;
+	width: 100%;
+}
+.comment_item{
+	position: relative;
+	margin-top: 10px;
+	width: 100%;
+	height: 140px;
+}
+.comment_item hr{
+	border-top: 1px solid #bbb;
+	opacity: 30%;
+
+}
+.comment_top{
+	position: relative;
+	width: 100%;
+	height: 60px;
+
+}
+.comment_top img{
+	position: relative;
+	top:5px;
+	max-height: 50px;
+	border-radius: 50%;
+}
+.comment_info{
+	position: relative;
+	width: calc(100%-60px);
+	margin-left: 10px;
+	display: inline-block;
+}
+.comment_top input{
+	margin-left: 10px;
+	border-style: none;
+	background-color: transparent;
+}
+.comment_top input:hover{
+	font-weight: 600;
+	cursor: pointer;
+}
+.comment_buttons1{
+	position: relative;
+	display: inline-block;
+}
+.comment_buttons2{
+	position: absolute;
+	right: 10px;
+	top: 10px;
+	display: inline-block;
+
+}
+.comment_nickname{
+	position: relative;
+	margin-left: 5px;
+	font-size: 1em;
+	font-weight : 600;
+	line-height: 1.6;
+}
+.comment_date{
+	position: relative;
+	display: block;
+	margin-left: 5px;
+	font-size: 1em;
+	font-weight : 400;
+	line-height: 1.6;
+	color: gray;
+
+}
+.comment_content{
+	position: relative;
+	margin: 5px;
+	width: 100%;
+	height: 70px;
+	font-size: 1.2em
+
+}
+
 /*.post__bigsubject{
 	width: 100%;
 	height: 40px;
