보드 네임 Ui(2020.09.15)

--- a/TeamProject/templates/post.html
+++ b/TeamProject/templates/post.html
@@ -28,9 +28,7 @@
 		</div>
 	</header>
 	<div class="post_main" >
-		<div class="post_title">
-			<h1>모임이름 - 게시판</h1>
-		</div>
+		<div class="post_title"></div>
 		<section class="post">
 
 		</section>
