--- a/TeamProject/templates/manager.html
+++ b/TeamProject/templates/manager.html
@@ -64,6 +64,9 @@
             <div class="board_page" id="pagination"></div>
         </div>
 
+        <div id="category_modal_container"></div>
+        <div id="board_modal_container"></div>
+
     </div>
 
     <div class="report_management_container">
@@ -136,7 +139,74 @@
     </div>
 
     <div class="user_management_container">
+        <div>
+            <span class="sub_title">회원 관리 - </span>
+            <select class="user_search_option">
+                <option value="0" selected>Select :)</option>
+                <option value="1">회원 이름</option>
+                <option value="2">회원 닉네임</option>
+                <option value="3">회원 아이디</option>
+            </select>
+            <input type="text" class="user_search_input">
+            <button class="user_search_btn plus_btn">검색</button>
+        </div>
 
+        <div class="user_container report_container">
+            <div class="user_sub_title user">
+                <span class="r_item">회원 이름</span>
+                <span class="r_item">아이디</span>
+                <span class="r_item">닉네임</span>
+                <span class="r_item">이메일</span>
+                <span class="r_item">생년월일</span>
+                <span class="r_item">회원 삭제</span>
+            </div>
+            <div class="line2"></div>
+            <div class="users">
+                <div class="user">
+                    <span class="r_item">케빈캉</span>
+                    <span class="r_item">Kevin kang</span>
+                    <span class="r_item">케빈</span>  
+                    <span class="r_item">gg0113@naver.com</span>
+                    <span class="r_item">1997-01-01</span>
+                    <button class="report_btn r_item">회원 삭제</button>
+                </div>
+                <div class="user">
+                    <span class="r_item">케빈캉</span>
+                    <span class="r_item">Kevin kang</span>
+                    <span class="r_item">케빈</span>  
+                    <span class="r_item">gg0113@naver.com</span>
+                    <span class="r_item">1997-01-01</span>
+                    <button class="report_btn r_item">회원 삭제</button>
+                </div>
+                <div class="user">
+                    <span class="r_item">케빈캉</span>
+                    <span class="r_item">Kevin kang</span>
+                    <span class="r_item">케빈</span>  
+                    <span class="r_item">gg0113@naver.com</span>
+                    <span class="r_item">1997-01-01</span>
+                    <button class="report_btn r_item">회원 삭제</button>
+                </div>
+                <div class="user">
+                    <span class="r_item">케빈캉</span>
+                    <span class="r_item">Kevin kang</span>
+                    <span class="r_item">케빈</span>  
+                    <span class="r_item">gg0113@naver.com</span>
+                    <span class="r_item">1997-01-01</span>
+                    <button class="report_btn r_item">회원 삭제</button>
+                </div>
+                <div class="user">
+                    <span class="r_item">케빈캉</span>
+                    <span class="r_item">Kevin kang</span>
+                    <span class="r_item">케빈</span>  
+                    <span class="r_item">gg0113@naver.com</span>
+                    <span class="r_item">1997-01-01</span>
+                    <button class="report_btn r_item">회원 삭제</button>
+                </div>
+            </div>
+            
+
+        </div>
+        
     </div>
 
 
