--- a/TeamProject/templates/post.html
+++ b/TeamProject/templates/post.html
@@ -44,7 +44,8 @@
 	<script src="https://kit.fontawesome.com/8625eebbbc.js" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="{{ url_for('static', filename='js/post/main.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/post/fetch.js') }}"></script>	
+	<script src="{{ url_for('static', filename='js/post/fetch.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/post/render_tool.js') }}"></script>	
 	<script src="{{ url_for('static', filename='js/post/render.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/post/router.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/post/event.js') }}"></script>
